php-swoole/swoole-app-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: swoole-app-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: php-swoole 
spec:
  hosts:
  - "*"
  gateways:
  - swoole-app-gateway
  http:
  - match:
    - uri:
        exact: /swoole
    route:
    - destination:
        host: php-swoole
        port:
          number: 8000
